Refactor: Extract methods to a provider class